Add "as expected" to a.adoc
https://github.com/redhat-documentation/supplementary-style-guide/issues/83

--- a/supplementary_style_guide/glossary_terms_conventions/general_conventions/a.adoc
+++ b/supplementary_style_guide/glossary_terms_conventions/general_conventions/a.adoc
@@ -84,6 +84,17 @@ For more information about Intel® trademarks, see the http://www.intel.com/cont
 *See also*:
 
 [discrete]
+[[as-expected]]
+==== image:images/no.png[no] as expected (adverb)
+*Description*: Expectations are relative, use "correctly" instead.
+
+*Use it*: no
+
+*Incorrect forms*:
+
+*See also*:
+
+[discrete]
 [[asynchronous-transfer-mode]]
 ==== image:images/yes.png[yes] Asynchronous Transfer Mode (noun)
 *Description*: "Asynchronous Transfer Mode" (ATM) is a network technology based on transferring data in cells or packets of a fixed size. The cell size used with ATM is relatively small compared to units used with older technologies.
